--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,21 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="GameOfLife.MainWindow"
-        Title="Game of life" Height="718" Width="1149" Icon="/GameOfLife;component/Images/GameIcon.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
+        Title="Crystal Simulator" Height="718" Width="1149" Icon="/GameOfLife;component/Images/GameIcon.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
 
     <Grid Background="#FF232323" Height="745">
-        <Canvas Height="250" HorizontalAlignment="Left" Margin="495,59,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000"/>
-        <Label Content="Game of Life" x:Name="label1" Margin="160,108,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="203" Height="45" VerticalAlignment="Top" Background="#00000000"/>
-        <Label Content="Wrong inputs!" FontFamily="Consolas" Margin="223,149,0,0" x:Name="label5" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="96" />
-        <Grid HorizontalAlignment="Left" Height="100" Margin="118,174,0,0" VerticalAlignment="Top" Width="320">
+        <Canvas Height="250" HorizontalAlignment="Left" Margin="543,59,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000"/>
+        <Canvas Height="250" HorizontalAlignment="Left" Margin="543,358,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
+        <Label Content="Crystal Simulator" x:Name="label1" Margin="112,59,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
+        <Grid HorizontalAlignment="Left" Height="100" Margin="74,124,0,0" VerticalAlignment="Top" Width="320">
             <TextBox Margin="112,25,0,0" x:Name="textBox1" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" />
             <Button Content="Load grid" Margin="176,16,0,0" x:Name="button1" Click="button1_Click" FontFamily="Consolas" Cursor="Arrow" Foreground="White" BorderBrush="White" Background="#00DDDDDD" TabIndex="2" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126" FontWeight="Bold" />
             <TextBox Margin="112,50,0,0" x:Name="textBox2" TextAlignment="Center" BorderBrush="White" TabIndex="1" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Foreground="White" Background="#00000000" FontFamily="Consolas" />
             <Label Content="Rows" Height="28" HorizontalAlignment="Left" Margin="52,23,0,0" x:Name="label2" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold" />
             <Label Content="Columns" Height="28" HorizontalAlignment="Left" Margin="52,46,0,0" x:Name="label3" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold" />
             <Button Content="Load simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="176,50,0,0" x:Name="loadSimualtion" VerticalAlignment="Top" Width="126" Click="loadSimualtion_Click" Background="#00DDDDDD" BorderBrush="White" TabIndex="3" Foreground="White" FontWeight="Bold" />
+            <Label Visibility="hidden" Content="Wrong inputs!" FontFamily="Consolas" Margin="58,-9,0,0" x:Name="label5" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="96" />
         </Grid>
-        <Grid HorizontalAlignment="Left" Height="191" Margin="10,469,0,0" VerticalAlignment="Top" Width="507">
+        <Grid Name="SimControls" HorizontalAlignment="Left" Height="191" Margin="21,471,0,0" VerticalAlignment="Top" Width="507" Visibility="hidden">
             <Slider Height="23" HorizontalAlignment="Left" Margin="196,11,0,0" x:Name="speedSlider" VerticalAlignment="Top" Width="140" ValueChanged="speedSlider_ValueChanged" Foreground="Red" Background="#00000000" BorderBrush="Red" TabIndex="6" />
             <Button Content="Restart" Height="27" HorizontalAlignment="Left" Margin="193,99,0,-26" x:Name="restart" VerticalAlignment="Top" Width="126" FontFamily="Consolas" DataContext="{Binding}" Click="restart_Click" BorderBrush="White" TabIndex="10" Foreground="White" Background="#00000000" FontWeight="Bold" />
             <Button Content="Start" Height="27" HorizontalAlignment="Left" Margin="193,56,0,0" x:Name="buttonStart" VerticalAlignment="Top" Width="126" Click="buttonStart_Click" FontFamily="Consolas" BorderBrush="Red" TabIndex="8" Foreground="Red" Background="#00000000" FontWeight="Bold" />
@@ -24,18 +25,60 @@
             <Button Content="Next iteration" Height="27" HorizontalAlignment="Left" Margin="337,56,0,0" x:Name="nextIteration" VerticalAlignment="Top" Width="126" Click="nextIteration_Click" FontFamily="Consolas" BorderBrush="White" TabIndex="9" IsEnabled="True" Background="#00000000" Foreground="White" FontWeight="Bold" />
             <Label Content="Speed" FontFamily="Consolas" Height="28" HorizontalAlignment="Left" Margin="133,6,0,0" x:Name="speedLabel" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" />
             <Button Content="Save simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="193,144,0,-71" x:Name="saveSimulation" VerticalAlignment="Top" Width="126" Click="saveSimulation_Click" BorderBrush="White" TabIndex="11" Background="#00000000" Foreground="White" FontWeight="Bold" />
-            <Label Content="Boundaries" Height="28" HorizontalAlignment="Left" Margin="132,-42,0,0" x:Name="label8" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold" />
-            <ComboBox Height="23" HorizontalAlignment="Left" Margin="214,-42,0,0" x:Name="comboBox2" VerticalAlignment="Top" Width="130" SelectionChanged="comboBox2_SelectionChanged" FontFamily="Consolas" BorderBrush="Black" TabIndex="5" Foreground="Black" Background="White" />
-            <Image Height="23" HorizontalAlignment="Left" Margin="350,-42,0,0" x:Name="image2" Source="/GameOfLife;component/Images/Info.png" Stretch="Fill" Width="23" MouseLeftButtonDown="image2_Click" VerticalAlignment="Top"/>
         </Grid>
-        <TabControl HorizontalAlignment="Left" Height="100" Margin="149,275,0,0" VerticalAlignment="Top" Width="100">
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-        </TabControl>
-        <Canvas Height="250" HorizontalAlignment="Left" Margin="495,358,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
+        <Grid Name="Settings" HorizontalAlignment="Left" Height="250" Margin="21,234,0,0" VerticalAlignment="Top" Width="477" Visibility="hidden">
+            <TabControl TabStripPlacement="Top" Name="TabControl" HorizontalAlignment="Left" Height="156" Margin="90,9,0,0" VerticalAlignment="Top" Width="267">
+                <TabItem Header="Standard one">
+                    <Grid Background="Transparent">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="129*"/>
+                            <ColumnDefinition Width="122*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="ε&#x0a;&#x0a;β&#x0a;&#x0a;Δ&#x0a;&#x0a;M&#x0a;&#x0a;" HorizontalAlignment="Left" Margin="48,10,0,0" VerticalAlignment="Top" Height="113" Width="22" FontFamily="Consolas"/>
+                        <Label Content="Δx&#x0a;&#x0a;Δy&#x0a;&#x0a;Δt&#x0a;&#x0a;" HorizontalAlignment="Left" Margin="125,20,0,0" VerticalAlignment="Top" Height="82" FontFamily="Consolas" Grid.ColumnSpan="2"/>
+                        <TextBox Name="e1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,14,0,0" TextWrapping="Wrap" Text="0,005" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="b1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,42,0,0" TextWrapping="Wrap" Text="400" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="d1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,69,0,0" TextWrapping="Wrap" Text="0,5" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="m1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,98,0,0" TextWrapping="Wrap" Text="20" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="dx1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="24.2,25,0,0" TextWrapping="Wrap" Text="0,005" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False" Grid.Column="1"/>
+                        <TextBox Name="dy1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="24.2,53,0,0" TextWrapping="Wrap" Text="0,005" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False" Grid.Column="1"/>
+                        <TextBox Name="dt1" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="24.2,80,0,0" TextWrapping="Wrap" Text="5e-6" VerticalAlignment="Top" Width="41" FontFamily="Consolas" RenderTransformOrigin="0.459,0.941" IsEnabled="False" Grid.Column="1"/>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Standard two">
+                    <Grid Background="Transparent">
+                        <Label Content="ε&#x0a;&#x0a;β&#x0a;&#x0a;Δ&#x0a;&#x0a;M&#x0a;&#x0a;" HorizontalAlignment="Left" Margin="48,10,0,0" VerticalAlignment="Top" Height="113" Width="22" FontFamily="Consolas"/>
+                        <Label Content="Δx&#x0a;&#x0a;Δy&#x0a;&#x0a;Δt&#x0a;&#x0a;" HorizontalAlignment="Left" Margin="125,20,0,0" VerticalAlignment="Top" Height="82" FontFamily="Consolas"/>
+                        <TextBox Name="e2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,14,0,0" TextWrapping="Wrap" Text="0,005" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="b2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,42,0,0" TextWrapping="Wrap" Text="300" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="d2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,69,0,0" TextWrapping="Wrap" Text="0,7" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="m2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,98,0,0" TextWrapping="Wrap" Text="30" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="dx2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="153,25,0,0" TextWrapping="Wrap" Text="0,005" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="dy2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="153,53,0,0" TextWrapping="Wrap" Text="0,005" VerticalAlignment="Top" Width="41" FontFamily="Consolas" IsEnabled="False"/>
+                        <TextBox Name="dt2" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="153,80,0,0" TextWrapping="Wrap" Text="5e-6" VerticalAlignment="Top" Width="41" FontFamily="Consolas" RenderTransformOrigin="0.459,0.941" IsEnabled="False"/>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Chosen values" Margin="0.2,0,-14.2,0">
+                    <Grid Background="Transparent" Margin="0,1,-2.4,-1.2">
+                        <Label Content="ε&#x0a;&#x0a;β&#x0a;&#x0a;Δ&#x0a;&#x0a;M&#x0a;&#x0a;" HorizontalAlignment="Left" Margin="48,10,0,0" VerticalAlignment="Top" Height="113" Width="22" FontFamily="Consolas"/>
+                        <Label Content="Δx&#x0a;&#x0a;Δy&#x0a;&#x0a;Δt&#x0a;&#x0a;" HorizontalAlignment="Left" Margin="125,20,0,0" VerticalAlignment="Top" Height="82" FontFamily="Consolas"/>
+                        <TextBox Name="e3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas"/>
+                        <TextBox Name="b3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas"/>
+                        <TextBox Name="d3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas"/>
+                        <TextBox Name="m3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="70,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas"/>
+                        <TextBox Name="dx3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="153,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas"/>
+                        <TextBox Name="dy3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="153,53,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas"/>
+                        <TextBox Name="dt3" TextAlignment="Center" HorizontalAlignment="Left" Height="17" Margin="153,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="41" FontFamily="Consolas" RenderTransformOrigin="0.459,0.941"/>
+                    </Grid>
+                </TabItem>
+            </TabControl>
+            <Label Content="Boundaries" Height="28" HorizontalAlignment="Left" Margin="51,192,0,0" x:Name="label8" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold" />
+            <ComboBox Height="23" HorizontalAlignment="Left" Margin="132,192,0,0" x:Name="comboBox2" VerticalAlignment="Top" Width="226" SelectionChanged="comboBox2_SelectionChanged" FontFamily="Consolas" BorderBrush="Black" TabIndex="5" Foreground="Black" Background="White" />
+            <Image Height="23" HorizontalAlignment="Left" Margin="372,192,0,0" x:Name="image2" Source="/GameOfLife;component/Images/Info.png" Stretch="Fill" Width="23" MouseLeftButtonDown="image2_Click" VerticalAlignment="Top"/>
+            <Button Name="Loadparameters" Content="   Load&#x0a;Parameters" HorizontalAlignment="Left" Margin="389,54,0,0" VerticalAlignment="Top" Width="80" Height="44" FontFamily="Consolas" Background="#00000000" BorderBrush="White" Foreground="White" FontWeight="Bold" Click="LoadParameters"/>
+            <Label Visibility="hidden" Content="Wrong inputs!" FontFamily="Consolas" Margin="382,103,0,0" x:Name="Wrongparameters" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="96" />
+            <Label Visibility="Hidden" Content="Inputs loaded!" FontFamily="Consolas" Margin="382,103,0,0" x:Name="Correctparameters" Foreground="Green" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="105" />
+            <Label Name="Parameters" Content="Parameters" HorizontalAlignment="Left" Margin="86,-15,0,0" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold"/>
+        </Grid>
     </Grid>
 </Window>
