--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         Title="Crystal Simulator" Height="718" Width="1149" Icon="/GameOfLife;component/Images/GameIcon.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
 
     <Grid Background="#FF232323" Height="745">
-        <Canvas Height="250" HorizontalAlignment="Left" Margin="543,59,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000"/>
+        <Canvas Height="250" HorizontalAlignment="Left" Margin="543,59,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000" MouseEnter="canvas1_MouseEnter"/>
         <Canvas Height="250" HorizontalAlignment="Left" Margin="543,358,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
         <Label Content="Crystal Simulator" x:Name="label1" Margin="112,59,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
         <Grid HorizontalAlignment="Left" Height="100" Margin="74,124,0,0" VerticalAlignment="Top" Width="320">
@@ -80,5 +80,6 @@
             <Label Visibility="Hidden" Content="Inputs loaded!" FontFamily="Consolas" Margin="382,103,0,0" x:Name="Correctparameters" Foreground="Green" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="105" />
             <Label Name="Parameters" Content="Parameters" HorizontalAlignment="Left" Margin="86,-15,0,0" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold"/>
         </Grid>
+        <Label Name="PhaseData" HorizontalAlignment="Left" Margin="460,73,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
