--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="GameOfLife.MainWindow"
         Title="Crystal Simulator" Height="718" Width="1149" Icon="/GameOfLife;component/Images/GameIcon.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
 
     <Grid Background="#FF232323" Height="745">
         <Canvas Height="250" HorizontalAlignment="Left" Margin="543,59,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000" MouseEnter="canvas1_MouseEnter"/>
-        <Canvas Height="250" HorizontalAlignment="Left" Margin="543,358,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
+        <Canvas Height="250" HorizontalAlignment="Left" Margin="826,59,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
         <Label Content="Crystal Simulator" x:Name="label1" Margin="112,59,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
         <Grid HorizontalAlignment="Left" Height="100" Margin="74,124,0,0" VerticalAlignment="Top" Width="320">
             <TextBox Margin="112,25,0,0" x:Name="textBox1" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" />
@@ -81,5 +82,35 @@
             <Label Name="Parameters" Content="Parameters" HorizontalAlignment="Left" Margin="86,-15,0,0" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold"/>
         </Grid>
         <Label Name="PhaseData" HorizontalAlignment="Left" Margin="460,73,0,0" VerticalAlignment="Top"/>
+        <!--<Grid Margin="490,371,363,124">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <lvc:CartesianChart Grid.Row="2" Margin="0,0,-286,0">
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Foreground="DodgerBlue" Title="Blue Axis"/>
+                    <lvc:Axis Foreground="IndianRed" Title="Red Axis" Position="RightTop">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Style="{StaticResource CleanSeparator}"></lvc:Separator>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                    <lvc:Axis Foreground="DarkOliveGreen" Title="Green Axis" Position="RightTop">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Style="{StaticResource CleanSeparator}"></lvc:Separator>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+                <lvc:CartesianChart.Series>
+                    <lvc:LineSeries Values="1,5,3,5,3" ScalesYAt="0"/>
+                    --><!--Scales at blue axis, Axis[0]--><!--
+                    <lvc:LineSeries Values="20,30,70,20,10"  ScalesYAt="1"/>
+                    --><!--Scales at red axis, Axis[1]--><!--
+                    <lvc:LineSeries Values="600,300,200,600,800"  ScalesYAt="2"/>
+                    --><!--Scales at green axis, Axis[2]--><!--
+                </lvc:CartesianChart.Series>
+            </lvc:CartesianChart>
+        </Grid>-->
     </Grid>
 </Window>
