--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,11 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="GameOfLife.MainWindow"
-        Title="Crystal Simulator" Height="718" Width="1149" Icon="/GameOfLife;component/Images/GameIcon.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
+        Title="Crystal Simulator" Height="718" Width="1149" Icon="Images/SnowFlake.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
 
     <Grid Background="#FF232323" Height="745">
-        <Canvas Height="250" HorizontalAlignment="Left" Margin="543,59,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000" MouseEnter="canvas1_MouseEnter"/>
-        <Canvas Height="250" HorizontalAlignment="Left" Margin="826,59,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
         <Label Content="Crystal Simulator" x:Name="label1" Margin="112,59,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
         <Grid HorizontalAlignment="Left" Height="100" Margin="74,124,0,0" VerticalAlignment="Top" Width="320">
             <TextBox Margin="112,25,0,0" x:Name="textBox1" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" />
@@ -81,18 +79,20 @@
             <Label Visibility="Hidden" Content="Inputs loaded!" FontFamily="Consolas" Margin="382,103,0,0" x:Name="Correctparameters" Foreground="Green" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="105" />
             <Label Name="Parameters" Content="Parameters" HorizontalAlignment="Left" Margin="86,-15,0,0" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold"/>
         </Grid>
-        <Label Name="PhaseData" HorizontalAlignment="Left" Margin="460,73,0,0" VerticalAlignment="Top"/>
-        <Grid Margin="490,371,363,124">
+        <Grid Visibility="hidden" Name="GridandGraphs" Margin="543,45,76,121">
             <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <!--<Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <lvc:CartesianChart Name="Chart1" Grid.Row="2" Margin="0,0,-286,0">
+            </Grid.RowDefinitions>-->
+            <lvc:CartesianChart Name="Chart1" Margin="0,368,0,0">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Iteration">
+                    <lvc:Axis Title="Iteration" MinValue="0">
                         <lvc:Axis.Separator>
-                            <lvc:Separator Step="1"></lvc:Separator>
+                            <lvc:Separator Step="1"> </lvc:Separator>
                         </lvc:Axis.Separator>
                     </lvc:Axis>
                 </lvc:CartesianChart.AxisX>
@@ -109,6 +109,15 @@
                     <lvc:LineSeries Name="redAxis" ScalesYAt="1"/>
                 </lvc:CartesianChart.Series>
             </lvc:CartesianChart>
+            <Label Content="Average Phase and Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,340,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="28" Width="524"/>
+            <Canvas Height="250" HorizontalAlignment="Left" Margin="0,58,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000" Grid.RowSpan="2"/>
+            <Canvas Height="250" HorizontalAlignment="Left" Margin="274,58,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
+            <Label Content="Phase" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="250"/>
+            <Label Content="Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="276,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="248"/>
+            <Label Content="Current Phase:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="105"/>
+            <Label Content="Current Temperature:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="276,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="143"/>
+            <Label Name="CurrentPhase" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="106,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="105"/>
+            <Label Name="CurrentTemperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="422,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="102"/>
         </Grid>
     </Grid>
 </Window>
