--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="GameOfLife.MainWindow"
-        Title="Crystal Simulator" Height="718" Width="1149" Icon="Images/SnowFlake.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
+        Title="Crystal Simulator" Height="718" Width="1300" Icon="Images/SnowFlake.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
 
     <Grid Background="#FF232323" Height="745">
-        <Label Content="Crystal Simulator" x:Name="label1" Margin="112,59,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
+        <Label Content="Crystal Simulator" x:Name="label1" Margin="111,45,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
         <Grid HorizontalAlignment="Left" Height="100" Margin="74,124,0,0" VerticalAlignment="Top" Width="320">
             <TextBox Margin="112,25,0,0" x:Name="textBox1" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" />
             <Button Content="Load grid" Margin="176,16,0,0" x:Name="button1" Click="button1_Click" FontFamily="Consolas" Cursor="Arrow" Foreground="White" BorderBrush="White" Background="#00DDDDDD" TabIndex="2" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126" FontWeight="Bold" />
@@ -75,7 +75,7 @@
             <Label Visibility="hidden" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Consolas" Margin="208,180,0,0" x:Name="Correctparameters" Foreground="Green" FontWeight="Bold" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="149" />
             <Label Name="Parameters" Content="Parameters" HorizontalAlignment="Left" Margin="86,-19,0,0" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold"/>
         </Grid>
-        <Grid Visibility="hidden" Name="GridandGraphs" Margin="543,45,76,121">
+        <Grid Visibility="hidden" Name="GridandGraphs" Margin="528,45,76,121">
             <Grid.RowDefinitions>
                 <RowDefinition/>
             </Grid.RowDefinitions>
@@ -84,19 +84,25 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>-->
-            <lvc:CartesianChart Name="Chart1" Margin="0,368,0,0">
+            <lvc:CartesianChart Name="Chart1" Margin="0,391,0,-38">
                 <lvc:CartesianChart.AxisX>
                     <lvc:Axis Title="Iteration" MinValue="0">
-                        <lvc:Axis.Separator>
-                            <lvc:Separator Step="1"></lvc:Separator>
-                        </lvc:Axis.Separator>
+                        <!--<lvc:Axis.Separator>
+                            <lvc:Separator 
+                                Step="1">
+                            </lvc:Separator>
+                        </lvc:Axis.Separator>-->
                     </lvc:Axis>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Foreground="DodgerBlue" Title="Average Phase"/>
-                    <lvc:Axis Foreground="IndianRed" Title="Average Temperature" Position="RightTop">
+                    <lvc:Axis Foreground="DodgerBlue" Title="Average Phase" MinValue="0" MaxValue="1">
                         <lvc:Axis.Separator>
-                            <lvc:Separator></lvc:Separator>
+                            <lvc:Separator Step="0.25"></lvc:Separator>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                    <lvc:Axis Foreground="IndianRed" Title="Average Temperature" Position="RightTop" MinValue="-1" MaxValue="0">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Step="0.25"></lvc:Separator>
                         </lvc:Axis.Separator>
                     </lvc:Axis>
                 </lvc:CartesianChart.AxisY>
@@ -105,18 +111,18 @@
                     <lvc:LineSeries Name="redAxis" ScalesYAt="1"/>
                 </lvc:CartesianChart.Series>
             </lvc:CartesianChart>
-            <Label Content="Average Phase and Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,340,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="28" Width="524"/>
-            <Canvas Height="250" HorizontalAlignment="Left" Margin="0,58,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="250" Background="#00000000" Grid.RowSpan="2"/>
-            <Canvas Height="250" HorizontalAlignment="Left" Margin="274,58,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="250" Background="#00000000"/>
-            <Label Content="Phase" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="250"/>
-            <Label Content="Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="276,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="248"/>
+            <Label Content="Average Phase and Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,363,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="28" Width="690"/>
+            <Canvas Height="300" HorizontalAlignment="Left" Margin="0,24,0,0" x:Name="canvas1" VerticalAlignment="Top" Width="300" Background="#00000000"/>
+            <Canvas Height="300" HorizontalAlignment="Left" Margin="390,24,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="300" Background="#00000000"/>
+            <Label Content="Phase" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="300"/>
+            <Label Content="Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="390,0,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="300"/>
             <Grid Name="Cellstatus" Visibility="hidden">
-                <Label Name="Cellphase" Content="Cell Phase:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="82"/>
-                <Label Name="Celltemperature" Content="Cell Temperature:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="274,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="120"/>
-                <Label Name="CellPhase" HorizontalContentAlignment="left" HorizontalAlignment="Left" Margin="84,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="105"/>
-                <Label Name="CellTemperature" HorizontalContentAlignment="left" HorizontalAlignment="Left" Margin="396,308,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="102"/>
-                <Label Name="Cellcoordinates1" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="0,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="102"/>
-                <Label Name="Cellcoordinates2" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="274,34,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="80"/>
+                <Label Name="Cellphase" Content="Cell Phase:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,326,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="82"/>
+                <Label Name="Celltemperature" Content="Cell Temperature:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="390,325,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="120"/>
+                <Label Name="CellPhase" HorizontalContentAlignment="left" HorizontalAlignment="Left" Margin="84,326,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="105"/>
+                <Label Name="CellTemperature" HorizontalContentAlignment="left" HorizontalAlignment="Left" Margin="512,325,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="102"/>
+                <Label Name="Cellcoordinates1" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="102"/>
+                <Label Name="Cellcoordinates2" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Margin="390,0,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="80"/>
             </Grid>
         </Grid>
     </Grid>
